@@ -24,6 +24,7 @@ Cacti CHANGELOG
 -issue#5806: Issues with Cacti posix_kill wrapper in Windows
 -feature#5784: Provide a means by which a user can track Cacti connections and disconnects from the php error_log
 -feature#5796: Due to Conflicting Interpretations of TCP Ping, Introduce new Ping Method
+-feature#5819: Be more precise on the Graph End time when an end time is not provided
 -feature: Update jQueryUI to 1.14.0
 -feature: Improve the performance of the repopulation of the poller cache
 
